--- a/Dockerfile.test
+++ b/Dockerfile.test
@@ -3,5 +3,11 @@ FROM golang:1.24 AS build
 WORKDIR /go/src/practice-4
 COPY . .
 
+# Завантаження залежностей
+RUN go mod download
+
+# Компіляція лише server (якщо потрібно)
+RUN go build -o server ./server
+
 ENV INTEGRATION_TEST=1
 ENTRYPOINT ["go", "test", "./integration"]
