--- a/docker-compose.test.yaml
+++ b/docker-compose.test.yaml
@@ -12,6 +12,17 @@ services:
       - server2
       - server3
       - balancer
+      - db
+
+  db:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    command: ["db"]
+    networks:
+      - servers
+    ports:
+      - "8083:8083"
 
   balancer:
     build:
@@ -20,6 +31,10 @@ services:
     command: ["lb", "--trace=true"]
     networks:
       - servers
+    depends_on:
+      - server1
+      - server2
+      - server3
 
   server1:
     build:
@@ -28,22 +43,34 @@ services:
     command: ["server", "--port=8080"]
     networks:
       - servers
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
 
   server2:
     build:
       context: .
       dockerfile: Dockerfile
-    command: ["server", "--port=8081"]
+    command: ["server", "--port=8080"]
     networks:
       - servers
+    depends_on:
+      - db
+    ports:
+      - "8081:8080"
 
   server3:
     build:
       context: .
       dockerfile: Dockerfile
-    command: ["server", "--port=8082"]
+    command: ["server", "--port=8080"]
     networks:
       - servers
+    depends_on:
+      - db
+    ports:
+      - "8082:8080"
 
 networks:
   servers:
